<resources>
    <string name="app_name">CorpApp</string>
    <string name="nombre">Nombre</string>

    <string name="btn_addimc">Registrar IMC</string>
    <string name="btn_goRegisterView">Registrarse</string>
    <string name="btn_Calculate">Calcular</string>

    <string name="txt_tittleRegister">REGISTRO</string>
    <string name="txt_nameR">Nombre: </string>
    <string name="txt_apellidoR">Apellido: </string>
    <string name="txt_nacR">Fecha de nacimiento: </string>
    <string name="txt_carrR">Carrera: </string>
    <string name="txt_sexR">Sexo: </string>
    <string name="txt_emailR">Correo: </string>
    <string name="txt_mobilR">Celular: </string>
    <string name="txt_LogIn">LOGIN</string>
    <string name="txt_LogInEmail">Correo</string>
    <string name="txt_LogInPasswd">Contraseña</string>
    <string name="txt_LogInIn">INGRESAR</string>


    <string name="email">Email</string>
    <string name="registrar"><![CDATA[REGISTRAR >>]]></string>
    <string name="carrera">Carrera</string>
    <string name="apellido">Apellido</string>
    <string name="celular">Celular</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="seleccion_una_opci_n">Seleccion una opción</string>
    <string name="nombreR">Nombre</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="correo">CORREO</string>

    <string name="hello">Hello World, MyAndroidAppActivity!</string>
    <!--string name="app_name">MyAndroidApp</string-->
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="btn_display">Display</string>
</resources>